feat(push): add push device API
