# services/api/src/push/application/push-provider.resolver.ts
@@ -1,0 +1,9 @@
+import { Injectable } from '@nestjs/common';
+import { PushProvider } from '@/push/application/ports/push.ports';
+
+@Injectable()
+export class PushProviderResolver {
+  resolve(): PushProvider {
+    return process.env.NODE_ENV === 'production' ? 'FCM' : 'EXPO';
+  }
+}
